changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix bug #1811411: Ground view is not correctly updated.
Correctly send face and name information when there is a player on an item
that is being identified.
Nicolas Weeger 2010-09-26

Fix bug #2072850: Inconsistent limits for damage stat.
Nicolas Weeger 2010-09-26

Tentative fix for bug #2020224: buggy(?) crafting yields.
Don't call again attempt_recipe(), as that would give again artifact properties
to the item. Instead, use the item in the cauldron.
Backported from trunk.
Nicolas Weeger 2010-09-26

Fix crash when a thrown object breaks while being picked up.
Andreas Kirschbaum 2009-07-10

Add command parameter validation as reported by Alex Tokar.
Andreas Kirschbaum 2009-06-14

Fix for bug 2281692 - CFDialog conversation NPC answer precedes PC speech.
server/monster.c: ext_info_map() wasn't called until after the event logic.
Instead, for players, we can draw it immediately - we only need to perhaps do
something special for monsters.  In this way, conversation is in the correct
order.
MSW 2009-04-14

Fix for bug 2602566 - Players can nest containers.  pick_up() has largely
same functionality, but lots of changes to remove the series of gotos and
generally just clean it up.
server/c_object.c: Clean up function pick_up().  Modify put_object_in_sack()
   to not allow containers to be put in containers.
MSW 2009-04-07

Fix for bug include/autoconf.h.in - customize stack of weapons bug.
This commit also fixes some other things, like update name not getting
sent to the client when doing the prepare.
types/weapon_improver/weapon_improver.c: All changes in prepare_weapon():